@startuml Database Schema -- ERD (v2)
!theme plain
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial

title Database Schema v2 -- All Services (Supabase/PostgreSQL)

note as N1
  One Supabase project, three schemas.
  No cross-schema JOINs in application code.
  v2: added missing fields from design review.
end note

package "user_schema" #E8F4F8 {
  entity "users" as users {
    * id : UUID <<PK>>
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * password_hash : VARCHAR
    * username : VARCHAR(100) <<UNIQUE>>
    * display_name : VARCHAR(100)
    * role : VARCHAR(20) = 'USER'
    bio : TEXT
    profile_picture_url : VARCHAR
    * is_active : BOOLEAN = true
    banned_at : TIMESTAMP
    ban_reason : VARCHAR(255)
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "user_preferences" as prefs {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<FK>>
    * category : VARCHAR(100)
    * weight : FLOAT
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  users ||--o{ prefs : has
}

package "video_schema" #F0F8E8 {
  entity "videos" as videos {
    * id : VARCHAR(100) <<PK>>
    --
    * title : VARCHAR(500)
    description : TEXT
    * category_id : VARCHAR <<FK>>
    * duration : INTEGER
    * source : ENUM(own, youtube)
    youtube_id : VARCHAR
    * uploader_id : UUID
    s3_key : VARCHAR
    * thumbnail_url : VARCHAR
    * view_count : BIGINT = 0
    * like_count : BIGINT = 0
    * dislike_count : BIGINT = 0
    language : VARCHAR(10) = 'en'
    * status : ENUM(pending, processing, under_review, ready, rejected, failed)
    moderation_notes : VARCHAR(500)
    reviewed_by : UUID
    reviewed_at : TIMESTAMP
    published_at : TIMESTAMP
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "video_tags" as tags {
    * video_id : VARCHAR <<FK>>
    * tag : VARCHAR(100)
    --
    <<PK: video_id + tag>>
  }

  entity "categories" as cats {
    * id : VARCHAR <<PK>>
    --
    * name : VARCHAR(100)
  }

  entity "watch_sessions" as sessions {
    * id : UUID <<PK>>
    --
    * user_id : UUID
    * video_id : VARCHAR <<FK>>
    * watch_duration : INTEGER
    * video_duration : INTEGER
    * completion_pct : FLOAT
    * rewatch_count : INTEGER = 0
    * source : ENUM(own, youtube)
    * created_at : TIMESTAMP
  }

  entity "upload_tokens" as tokens {
    * token : UUID <<PK>>
    --
    * video_id : VARCHAR <<FK>>
    * uploader_id : UUID
    * expires_at : TIMESTAMP
    * used : BOOLEAN = false
    * created_at : TIMESTAMP
  }

  entity "video_outbox" as outbox {
    * id : UUID <<PK>>
    --
    * aggregate_type : VARCHAR
    * aggregate_id : VARCHAR
    * topic : VARCHAR
    * payload : JSONB
    * status : VARCHAR
    * created_at : TIMESTAMP
    published_at : TIMESTAMP
  }

  videos ||--o{ tags : has
  videos }o--|| cats : belongs to
  videos ||--o{ sessions : tracked by
  videos ||--o{ tokens : authorized by
}

package "recommendation_schema" #F8F0F8 {
  entity "interactions" as interactions {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<INDEX>>
    * video_id : VARCHAR <<INDEX>>
    * event_type : ENUM(watch, like, dislike, search_click, rewatch)
    * score : FLOAT
    * completion_pct : FLOAT
    * created_at : TIMESTAMP
    <<INDEX: (user_id, video_id)>>
  }

  entity "user_factors" as ufactors {
    * user_id : UUID <<PK>>
    --
    * vector : FLOAT[]
    * interaction_count : INTEGER = 0
    last_trained_at : TIMESTAMP
    * updated_at : TIMESTAMP
  }

  entity "item_factors" as ifactors {
    * video_id : VARCHAR <<PK>>
    --
    vector : FLOAT[]
    * tags : TEXT[]
    * category_id : VARCHAR
    * thumbnail_url : VARCHAR
    * language : VARCHAR(10)
    * view_count : BIGINT = 0
    * global_score : FLOAT = 0
    * updated_at : TIMESTAMP
  }

  entity "user_category_profiles" as catprofiles {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<INDEX>>
    * category : VARCHAR(100)
    * weight : FLOAT
    * source : ENUM(declared, inferred)
    * updated_at : TIMESTAMP
  }

  entity "processed_events" as pevents {
    * event_id : VARCHAR <<PK>>
    --
    * processed_at : TIMESTAMP
  }
}

@enduml
